components/toggle-button-group/src/vwc-toggle-button-group.scss
@use 'sass:list';
@use 'sass:selector';
@use 'sass:map';

$vvd-toggle-button-group-shape: --vvd-toggle-button-group-shape;
$scopes: button icon-button;
$toggle-buttons-type-selectors: selector.append('vwc-', list.join($scopes, '', $separator: comma));

@use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables' as scheme-variables;
@use '@vonage/vvd-foundation/scss/mixins/shape-mixins' as shape-mixins with (
	$variable-name: #{$vvd-toggle-button-group-shape}
);

@include shape-mixins.shape(
	$shapes: (
		rounded: 6px,
		pill: 24px,
	)
);

@mixin size($type) {
	:host([#{$type}]) & {
		--button-height: #{$unit * 8px};

		.vvd-icon {
			--icon-size: #{$unit * 4px};
		}
		@content;
	}
}

$sizes: (
	'default': 40px,
	'enlarged': 48px,
	'dense': 32px,
);

:host {
	display: flex;
}

::slotted([group-button]) {
	--mdc-theme-on-primary: var(#{scheme-variables.$vvd-color-on-base});
	--mdc-ripple-color: var(#{scheme-variables.$vvd-color-on-base});
	--mdc-ripple-focus-opacity: 0;
}

// TODO::remove these when viv-485 is complete
:host([accent]) {
	::slotted([group-button][selected]) {
		--mdc-theme-primary: var(#{scheme-variables.$vvd-color-primary});
		--mdc-theme-on-primary: var(#{scheme-variables.$vvd-color-on-primary});
	}

	::slotted([group-button]:hover:not([selected])) {
		--mdc-theme-primary: var(#{scheme-variables.$vvd-color-neutral-50});
	}
}


::slotted(vwc-button) {
	--mdc-theme-primary: var(#{scheme-variables.$vvd-color-neutral-30});
}

::slotted([group-button][selected]) {
	--mdc-theme-primary: var(#{scheme-variables.$vvd-color-neutral-50});
}

::slotted([group-button]:hover:not([selected])) {
	--mdc-theme-primary: var(#{scheme-variables.$vvd-color-neutral-40});
}

:host([disabled]) ::slotted([group-button]) {
	--mdc-theme-primary: var(#{scheme-variables.$vvd-color-neutral-30});
	--mdc-theme-on-primary: var(#{scheme-variables.$vvd-color-neutral-50});
	pointer-events: none;
}

// End of viv-485 removal

@each $scope in $scopes {
	::slotted(vwc-#{$scope}) {
		--vvd-#{$scope}-background-color: var(#{scheme-variables.$vvd-color-neutral-30});
		--vvd-#{$scope}-color: var(#{scheme-variables.$vvd-color-on-base});
		--vvd-#{$scope}-shape: var(#{$vvd-toggle-button-group-shape});
	}

	::slotted(vwc-#{$scope}[selected]) {
		--vvd-#{$scope}-background-color: var(#{scheme-variables.$vvd-color-neutral-50});
	}

	:host([accent]) {

		--vwc-#{$scope}-padding: 2px;
		--vvd-#{$scope}-height: calc(#{map.get($sizes, 'default')} - 2*var(--vwc-#{$scope}-padding));

		::slotted(vwc-#{$scope}) {
			padding: var(--vwc-#{$scope}-padding, 0);
			background-color: var(#{scheme-variables.$vvd-color-neutral-30});
		}

		::slotted(vwc-#{$scope}[selected]) {
			--vvd-#{$scope}-background-color: var(#{scheme-variables.$vvd-color-primary});
			--vvd-#{$scope}-color: var(#{scheme-variables.$vvd-color-on-primary});
			--vvd-button-shape: 6px;
		}

		::slotted(vwc-#{$scope}:hover:not([selected])) {
			--vvd-button-shape: 6px;
			--vvd-#{$scope}-background-color: var(#{scheme-variables.$vvd-color-neutral-50});
		}
	}

	:host([accent][dense]) {
		--vvd-#{$scope}-height: calc(#{map.get($sizes, 'dense')} - 2*var(--vwc-#{$scope}-padding));
	}

	:host([accent][enlarged]) {
		--vvd-#{$scope}-height: calc(#{map.get($sizes, 'enlarged')} - 2*var(--vwc-#{$scope}-padding));
	}

	::slotted(vwc-#{$scope}:hover:not([selected])) {
		--vvd-#{$scope}-background-color: var(#{scheme-variables.$vvd-color-neutral-40});
	}

	::slotted(vwc-#{$scope}:not(:first-child):not(:last-child)) {
		--vvd-#{$scope}-shape: 0;
	}

	::slotted(vwc-#{$scope}:first-child:not(:last-child)) {
		--vvd-#{$scope}-shape: var(#{$vvd-toggle-button-group-shape}) 0 0 var(#{$vvd-toggle-button-group-shape});
		border-radius: var(#{$vvd-toggle-button-group-shape}) 0 0 var(#{$vvd-toggle-button-group-shape});
	}

	::slotted(vwc-#{$scope}:last-child:not(:first-child)) {
		--vvd-#{$scope}-shape: 0 var(#{$vvd-toggle-button-group-shape}) var(#{$vvd-toggle-button-group-shape}) 0;
		border-radius: 0 var(#{$vvd-toggle-button-group-shape}) var(#{$vvd-toggle-button-group-shape}) 0;
	}

	:host([disabled]) ::slotted([group-button]) {
		--vvd-#{$scope}-background-color: var(#{scheme-variables.$vvd-color-neutral-30});
		--vvd-#{$scope}-color: var(#{scheme-variables.$vvd-color-neutral-50});
		pointer-events: none;
	}
}

